# kafka-to-psql

./: Cargo.toml  Dockerfile
src/: main.rs
