[package]
name = "kafka-to-pgql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.36.2", features = ["cmake-build"]}
tokio-postgres = { version = "0.7.2" , features = ["with-uuid-1"]}
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.7.0", features = ["serde"] }
